tests/e2e/unary_complex_5.story
a = ! (my_service command k1: !b) or !(my_service2 command k2: ! !c)
